--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <p>로그인 테스트</p>
     <script src="js/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="js/angularjs/angular.min.js" type="text/javascript"></script>
     <script src="js/kendoui/kendo.all.min.js" type="text/javascript"></script>
