--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,12 @@
 <!doctype html>
-<html ng-app="loginApp">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>신컨테이너운송시스템</title>
-
-
 </head>
 
-<body ng-controller="LoginController">
-    <p>로그인 테스트~~</p>
-    
+<body>
+    <p>로그인 테스트</p>
     <script src="js/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="js/angularjs/angular.min.js" type="text/javascript"></script>
     <script src="js/kendoui/kendo.all.min.js" type="text/javascript"></script>
