--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Next intermodal System</title>
 <link
-    href="css/angular-bootstrap.css"
+    href="css/nxtims.css"
     rel="stylesheet">
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
@@ -13,13 +13,7 @@
 </head>
 
 <body ng-app="nxtims" ng-cloak class="ng-cloak">
-    <div ng-controller="navigation as nav" class="container">
-        <ul class="nav nav-pills" role="tablist">
-            <li ng-class="{active:nav.tab('home')}"><a href="#/">home</a></li>
-            <li ng-class="{active:nav.tab('navigation')}"><a href="#/login">login</a></li>
-            <li ng-show="authenticated"><a href="" ng-click="nav.logout()">logout</a></li>
-        </ul>
-    </div>
+    <div ng-controller="navigation as nav" class="container"></div>
     <div ng-view class="container"></div>
     
     <script src="js/jquery/jquery.min.js" type="text/javascript"></script>
