--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>신컨테이너운송시스템</title>
+<title>Next intermodal System</title>
+<link
+    href="css/nxtims.css"
+    rel="stylesheet">
+<style type="text/css">
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none !important;
+}
+</style>
 </head>
 
-<body>
-    <p>로그인 테스트~~</p>
+<body ng-app="nxtims" ng-cloak class="ng-cloak">
+    <div ng-controller="navigation as nav" class="container"></div>
+    <div ng-view class="container"></div>
+    
     <script src="js/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="js/angularjs/angular.min.js" type="text/javascript"></script>
-    <script src="js/kendoui/kendo.all.min.js" type="text/javascript"></script>
+    <script src="js/angularjs/angular-route.min.js" type="text/javascript"></script>
+    <script src="js/angularjs/angular-cookies.min.js" type="text/javascript"></script>
+    <script src="js/nxtims.js"></script>
 </body>
 </html>
