--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<base href="/" />
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge;" />
 <title>Next intermodal System</title>
