--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,6 +30,7 @@
     <script src="js/angularjs/angular-ui-router.js" type="text/javascript"></script>
     <script src="js/angularjs/angular-cookies.min.js" type="text/javascript"></script>
     <script src="js/angularjs/angular-resource.min.js" type="text/javascript"></script>
+    <script src="js/angularjs/i18n/angular-locale_ko-kr.js" type="text/javascript"></script>
     
     <!-- kendo ui -->
     <script src="js/kendoui/kendo.all.min.js"></script>
@@ -42,9 +43,10 @@
     <script src="js/app/common/user.js"></script>
     <script src="js/app/services.js"></script>
     <script src="js/app/directives.js"></script>
+    <script src="js/app/login.js"></script>
+    <script src="js/app/home.js"></script>
     
     <!-- main application module -->
     <script src="js/nxtims.js"></script>
-    <script src="js/nxtimsControllers.js"></script>
 </body>
 </html>
