--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,6 +45,7 @@
     <script src="js/app/directives.js"></script>
     <script src="js/app/login.js"></script>
     <script src="js/app/home.js"></script>
+    <script src="js/app/program.js"></script>
     
     <!-- main application module -->
     <script src="js/nxtims.js"></script>
