컴포넌트 js추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,11 +9,11 @@
 <link href="css/nxtims.css" rel="stylesheet"/>
 
 <!-- kendo ui css -->
-<!-- <link href="css/kendo.common-bootstrap.core.min.css" rel="stylesheet"/> -->
+<link href="css/kendo.common-bootstrap.core.min.css" rel="stylesheet"/>
 <link href="css/kendo.dataviz.bootstrap.min.css" rel="stylesheet"/>
 <link href="css/kendo.common-bootstrap.min.css" rel="stylesheet"/>
 <link href="css/kendo.bootstrap.min.css" rel="stylesheet"/>
-
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
 
@@ -34,6 +34,8 @@
     
     <!-- kendo ui -->
     <script src="js/kendoui/kendo.all.min.js"></script>
+    <script src="js/kendoui/cultures/kendo.culture.ko-KR.min.js"></script>
+    <script src="js/kendoui/angular-kendo-window.js"></script>
     
     <!-- nxtIms modules -->  
     <script src="js/app/common/resource.js"></script>
@@ -43,6 +45,8 @@
     <script src="js/app/common/user.js"></script>
     <script src="js/app/services.js"></script>
     <script src="js/app/directives.js"></script>
+    <script src="js/app/components.js"></script>
+    <script src="js/app/filters.js"></script>
     <script src="js/app/login.js"></script>
     <script src="js/app/home.js"></script>
     <script src="js/app/program.js"></script>
