--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 
 <body ng-app="nxtIms" ng-cloak>
     <!-- <div ng-view class="container"></div> -->
-    <div ui-view class="k-container"></div>
+    <div ui-view></div>
     
     <!-- jquery -->
     <script src="js/lib/jquery/jquery.min.js" type="text/javascript"></script>
@@ -45,7 +45,6 @@
     
     <!-- nxtIms modules -->  
     <script src="js/app/common/resource.js"></script>
-    <script src="js/app/common/locale.js"></script>
     <script src="js/app/common/message.js"></script>
     <script src="js/app/common/auth.js"></script>
     <script src="js/app/common/user.js"></script>
