Change-Id: I25c37780927a7a1ede3acf0d2543ae4720c02348

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,6 +42,8 @@
     <script src="js/lib/kendoui/kendo.all.min.js"></script>
     <script src="js/lib/kendoui/cultures/kendo.culture.ko-KR.min.js"></script>
     <script src="js/lib/kendoui/angular-kendo-window.js"></script>
+    <script src="js/lib/jszip.js"></script>
+    <script src="js/lib/xlsx.js"></script>
     
     <!-- nxtIms modules -->  
     <script src="js/app/common/resource.js"></script>
