Change-Id: I6113757fb6101d4bc657a84d90a4258e3f37ba63

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -58,5 +58,9 @@
     
     <!-- main application module -->
     <script src="js/nxtims.js"></script>
+    
+    <!-- excel -->
+    <script src="js/lib/jszip.js"></script>
+    <script src="js/lib/xlsx.js"></script>
 </body>
 </html>
