css 변경 및 그리드 이벤트 생성

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
 <link href="css/kendo.default.min.css" rel="stylesheet"/>
 <link href="css/kendo.dataviz.min.css" rel="stylesheet"/>
 <link href="css/kendo.dataviz.default.min.css" rel="stylesheet"/>
+<link href="css/kendo.silver.min.css" rel="stylesheet"/>
 
 <link href="css/nxtims.css" rel="stylesheet"/>
 
