--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 <!-- kendo ui css -->
 <link href="css/kendo.common.min.css" rel="stylesheet"/>
 <link href="css/kendo.rtl.min.css" rel="stylesheet"/>
-<link href="css/kendo.default.min.css" rel="stylesheet"/>
+<!-- <link href="css/kendo.default.min.css" rel="stylesheet"/> -->
 <link href="css/kendo.dataviz.min.css" rel="stylesheet"/>
 <link href="css/kendo.dataviz.default.min.css" rel="stylesheet"/>
 <link href="css/kendo.silver.min.css" rel="stylesheet"/>
